Fix: Modified html for accessibility screen readers

--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -8,8 +8,8 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="main-view">
-      <img src="./images/image-qr-code.png" />
+    <main class="main-view">
+      <img alt="qr-code image" src="./images/image-qr-code.png" />
       <div class="main-text">
       <h1>Improve your front-end skills by building projects</h1>
       <p>
@@ -17,12 +17,12 @@
         the next level
       </p>
     </div>
-    </div>
-    <div class="attribution">
+    </main>
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/angie-254">Angie-254</a>.
-    </div>
+    </footer>
   </body>
 </html>
